@@ -20,6 +20,7 @@ Date:
     Fixes:
         - Prevent productivity bonuses from exceeding +300%, unless otherwise allowed by mods.
         - When loading duplicate research productivity effects, obey both of them, instead of failing.
+        - Fixed a crash when item.weight == 0, related to ultracube.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.11.1
 Date: April 5th 2025
